# auto-expense-tracker

./: .pre-commit-config.yaml  .pydocstyle  .pylintrc  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
scripts/: setup.sh
src/utils/: welcome.py
tests/: test_utils.py
